vgd-1135 - Fixed the issue of showing and hiding the playlist. Also based on mobile.

--- a/src/styles/components/controls.scss
+++ b/src/styles/components/controls.scss
@@ -51,6 +51,9 @@
             text-transform: uppercase;
             font-weight: 600;
             font-size: 16px;
+            @media (max-width: $plyr-bp-sm) {
+                display: none;
+            }
         }
     }
 
